feat: track multiple calories as measurement, smaller fixes
